css/index.css
/* ... */
h1,
h2,
h3,
time {
  font-family: 'MyDM-Serif', serif;
  font-weight: 400; }

.section_heading {
  display: none; }

section {
  padding-left: 14px;
  padding-right: 14px; }

@media (min-width: 1440px) {
  section {
    padding-left: 135px;
    padding-right: 135px; } }

.masthead {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  background: #434CCC;
  padding-top: 16px;
  padding-bottom: 16px;
  padding-left: 14px;
  padding-right: 14px; }

.masthead_heading {
  margin: 0; }

.masthead_heading-title {
  font-size: 24px;
  color: #FFFFFF;
  text-transform: uppercase; }

@media (min-width: 1440px) {
  .masthead {
    padding-left: 135px;
    padding-right: 135px; }
  .masthead_heading-title {
    font-size: 40px; } }

.navigation {
  position: relative; }

.show-menu,
.navigation_list {
  position: absolute; }

.navigation_list {
  top: 0;
  right: 0;
  line-height: 24px;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  background-color: #2b0ba0;
  border-bottom-left-radius: 24px;
  transform: translate(12%, -250%);
  transition: transform 0.2s;
  max-width: 400px; }

.navigation_list-item {
  font-weight: 700;
  border-block-end: 1px solid #FFFFFF; }

.navigation_link {
  color: #FFFFFF; }

.navigation_list-item:hover {
  border-block-end: 1px solid chartreuse; }

.navigation_link:hover {
  color: chartreuse; }

.menu {
  background-image: url("../images/icon_menu.svg");
  width: 20px;
  height: 14px;
  display: block;
  background-size: cover;
  text-indent: -9999px;
  cursor: pointer; }

.show-menu {
  top: -100%; }

body > [type="checkbox"]:checked ~ header .navigation_list {
  position: absolute;
  right: 0;
  top: 0;
  transform: translate(12%, -35%);
  transition: transform 0.2s; }

body > [type="checkbox"]:checked ~ header .menu {
  background-image: none;
  position: fixed;
  top: 0;
  right: 0;
  background-color: rgba(5, 5, 5, 0.5);
  width: 100vw;
  height: 100vh; }

@media (min-width: 640px), (min-width: 1440px) {
  .navigation_list {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    background-color: unset;
    background-image: none;
    height: 100%;
    width: 324px;
    position: unset;
    max-width: 100%;
    transform: none; }
  .navigation_list-item:hover {
    border-block-end: none; }
  .navigation_list-item {
    display: block;
    border: none; }
  .show-menu,
  .menu {
    display: none; } }

.section_details-content {
  padding-top: 31px; }

.details_content-breadcrumb {
  position: relative; }

.breadcrumb-link {
  color: rgba(0, 0, 0, 0.5);
  padding-left: calc(14px + 10px); }

.breadcrumb-link::before {
  content: "";
  background-image: url("../images/icon_arrow_left.svg");
  display: block;
  position: absolute;
  top: 5px;
  left: 0;
  width: 14px;
  height: 8px; }

.details_content-heading {
  font-size: 52px; }

.details_content-header-paragraph {
  font-size: 18px; }

.details_content-figure {
  display: grid;
  grid-gap: 9px;
  padding-top: calc(82px - 32px);
  padding-bottom: calc(92px - 32px);
  overflow: auto; }

.active-picture {
  grid-column: 1/9; }

.image-active,
.details_content-figure-picture {
  max-width: 274px;
  max-height: 170px; }

.small-image,
.image-active {
  border-radius: 5px; }

.small-image {
  max-width: 137px;
  max-height: 85px; }

.not-active {
  opacity: 0.5; }

.photo_information-list {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-gap: 40px; }

.photo_information-list-item {
  display: flex;
  flex-direction: column; }

.information-detail {
  font-weight: 700; }

.summary_article-heading {
  font-size: 40px; }

.details_content-summary-article {
  padding-top: 75px;
  padding-bottom: 105px; }

.summary_article-header-paragraph {
  padding-top: 31px; }

.summary_article-paragraph,
.summary_article-header-paragraph {
  padding-bottom: 31px; }

.summary_article-paragraph,
.information_title {
  color: rgba(0, 0, 0, 0.5); }

.summary_article-heading,
.summary_article-header-paragraph,
.summary_article-paragraph,
.details_content-breadcrumb,
figure {
  margin: 0; }

@media (min-width: 640px) {
  .image-active,
  .details_content-figure-picture {
    max-width: 346px;
    max-height: 215px; } }

@media (min-width: 1440px) {
  .section_details-content {
    display: grid;
    grid-gap: 2rem; }
  .details_content-heading {
    font-size: 72px;
    max-width: 457px; }
  .details_content-summary-article {
    grid-column: 2;
    padding-top: 0; }
  .summary_article-heading {
    line-height: 62px;
    font-size: 52px; }
  .summary_article-header-paragraph {
    padding-bottom: 38px; }
  .summary_article-paragraph {
    padding-bottom: 55px; }
  .details_content-figure {
    grid-column: 1/3;
    max-width: 1170px;
    overflow: visible; }
  .image-active,
  .details_content-figure-picture {
    max-width: 1170px;
    max-height: 728px; }
  .photo_information-list {
    max-width: 443px;
    max-height: 152px;
    align-items: flex-end;
    grid-column: 1; } }

.section_newsletter {
  background: #FFDD78;
  padding-top: 63px;
  padding-bottom: 54px; }

.article_header-link {
  color: #000000;
  font-size: 16px;
  font-weight: normal;
  text-transform: uppercase; }

.newsletter_article-title {
  font-size: 40px; }

.email_input {
  border: 1px solid #DADADA;
  padding-top: 16px;
  padding-bottom: 16px;
  margin-top: 16px;
  margin-bottom: 16px;
  max-width: 346px; }

input::-webkit-input-placeholder {
  padding-left: 16px; }

.submit_button {
  background-color: #434CCC;
  color: #FFFFFF;
  font-size: 16px;
  padding-top: calc((48px - 16px) / 2);
  padding-bottom: calc((48px - 16px) / 2);
  padding-left: 45px;
  padding-right: 45px;
  border: none;
  max-height: 48px;
  max-width: 100%; }

.submit_button:hover {
  background-color: #1e27a7;
  box-shadow: 1px 1px 3px #000000; }

.submit_button,
.email_input {
  border-radius: 5px; }
/* ... */

